--- a/package.json
+++ b/package.json
@@ -1,45 +1,27 @@
 {
-  "name": "sales-lead-manage",
-  "private": true,
-  "version": "0.0.0",
+  "name": "backend",
+  "version": "1.0.0",
+  "description": "",
+  "license": "ISC",
+  "author": "",
   "type": "module",
+  "main": "server.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "dependencies": {
-    "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "@tailwindcss/vite": "^4.0.9",
-    "axios": "^1.8.1",
-    "date-fns": "^4.1.0",
-    "framer-motion": "^12.7.4",
-    "jspdf": "^3.0.0",
-    "jspdf-autotable": "^5.0.2",
-    "lucide-react": "^0.477.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-feather": "^2.0.10",
-    "react-icons": "^5.5.0",
-    "react-paginate": "^8.3.0",
-    "react-router-dom": "^7.2.0",
-    "react-simple-maps": "^3.0.0",
-    "recharts": "^2.15.1"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react-swc": "^3.8.0",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.9",
-    "vite": "^6.2.0"
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
+    "cookies-parser": "^1.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "express-session": "^1.18.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.12.0",
+    "node": "^23.9.0",
+    "nodemon": "^3.1.9"
   }
 }
